# ud_genai_pr3

./: requirements.txt
starter/: .env  env.example  project_proposal.md  pyproject.toml  requirements.txt  requirements_slim.txt
starter/evals/: common_evaluators.py  config.py  utils.py
starter/evals/audio/: evaluators.py  test_cases.py
starter/evals/image/: evaluators.py  test_cases.py
starter/evals/test_data/: professional_text.txt  text_with_pii.txt  unfriendly_text.txt
starter/evals/text/: evaluators.py  test_cases.py
starter/evals/video/: evaluators.py  test_cases.py
starter/multimodal_moderation/: app.py  env.py  fastapi_app.py  gradio_app.py  tracing.py  utils.py
starter/multimodal_moderation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
starter/multimodal_moderation/agents/: audio_agent.py  customer_agent.py  image_agent.py  text_agent.py  video_agent.py
starter/multimodal_moderation/types/: model_choice.py  moderation_result.py
starter/tests/: test_audio_agent.py  test_env_setup.py  test_gradio_app.py  test_image_agent.py  test_moderation_result.py  test_text_agent.py  test_video_agent.py
